--- a/src/apps/ecidadania/proposals/templates/proposals/proposalset_form.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposalset_form.html
@@ -48,7 +48,7 @@ automatically if found in the data models.
             {% endif %}
 
             <div class="control-group {% if form.name.errors %}error{% endif %}">
-                <label>{{ form.name.label }}</label>
+                <label class="control-label">{{ form.name.label }}</label>
                 <div class="controls">
                     <div class="input-append">
                         {{ form.name }}
@@ -67,7 +67,7 @@ automatically if found in the data models.
             </div>
 
             <div class="control-group {% if form.debate.errors %}error{% endif %}">
-                <label>{{ form.debate.label }}</label>
+                <label class="control-label">{{ form.debate.label }}</label>
                 <div class="controls">
                     <div class="input-prepend">
                         {{ form.debate }}
