--- a/src/apps/ecidadania/voting/templates/voting/poll_form.html
+++ b/src/apps/ecidadania/voting/templates/voting/poll_form.html
@@ -57,7 +57,7 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
             {% endif %}
 
             <div class="control-group {% if form.question.errors %}error{% endif%}">
-                <label>{{ form.question.label }}</label>
+                <label class="control-label" class="control-label">{{ form.question.label }}</label>
                 <div class="controls">
                     <div class="input-append">
                         {{ form.question }}
@@ -76,7 +76,7 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
             </div>
 
             <div class="control-group {% if form.poll_tags.errors %}error{% endif%}">
-                <label>{{ form.poll_tags.label }}</label>
+                <label class="control-label">{{ form.poll_tags.label }}</label>
                 <div class="controls">
                     <div class="input-append">
                         {{ form.poll_tags }}
@@ -93,10 +93,13 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
                     {% endif %}
                 </div>
             </div>
-                    {{ choiceform.management_form }}
-                    {% for choice in choiceform %}
+
+            <hr>
+            
+            {{ choiceform.management_form }}
+            {% for choice in choiceform %}
             <div class="control-group {% if choice.choice_text.errors %}error{% endif %}">
-                <label>{{ choice.choice_text.label }}</label>
+                <label class="control-label">{{ choice.choice_text.label }}</label>
                 <div class="controls">
                     <div class="input-append">
                         {{ choice.choice_text }}
@@ -113,8 +116,9 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
                     {% endif %}
                 </div>
             </div>
-<div class="votes"><div class="control-group {% if choice.votes.errors %}error{% endif %}">
-                <label>{{ choice.votes.label }}</label>
+            <div class="votes">
+                <div class="control-group {% if choice.votes.errors %}error{% endif %}">
+                <label class="control-label">{{ choice.votes.label }}</label>
                 <div class="controls">
                     <div class="input-append">
                         {{ choice.votes }}
@@ -139,7 +143,7 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
             <h3>{% trans "Staff members options" %}</h3>
 
             <div class="control-group {% if form.author.errors %}error{% endif%}">
-                <label>{{ form.author.label }}</label>
+                <label class="control-label">{{ form.author.label }}</label>
                 <div class="controls">
                     <div class="input-prepend">
                         {{ form.author }}
@@ -158,7 +162,7 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
             </div>
 
             <div class="control-group {% if form.space.errors %}error{% endif%}">
-                <label>{{ form.space.label }}</label>
+                <label class="control-label">{{ form.space.label }}</label>
                 <div class="controls">
                     <div class="input-prepend">
                         {{ form.space }}
