--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -155,6 +155,7 @@ hr { /* This hr replaces the bootstrap one */
 }
 
 .postinfo {
+    margin-top: -10px;
     padding-top: 5px;
     padding-bottom: 5px;
     border-bottom: 1px solid #DDD;
