Fixed #207: Textarea size

--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -26,6 +26,11 @@ a {
 img {
 	border: none;
 }
+
+textarea {
+    width: 510px;
+    margin: 10px;
+}
 /* END HTML TAGS DEFINITION */
 
 /* COMMON CUSTOMIZATIONS */
