--- a/src/e_cidadania/templates/menu.html
+++ b/src/e_cidadania/templates/menu.html
@@ -18,7 +18,7 @@
                         <input name="next" type="hidden" value="/" />
                         <input type="hidden" name="language" value="{{ lang.0 }}" />
                         <a href="#" onclick="document.setLang{{ lang.1 }}.submit();return false;">
-                            <img src="{{ STATIC_URL }}/assets/flags/{{ lang.0 }}.gif" title="{{ lang.1 }}" alt="{{ lang.1 }}"/>
+                            <img style="margin-left:10px;" src="{{ STATIC_URL }}/assets/flags/{{ lang.0 }}.gif" title="{{ lang.1 }}" alt="{{ lang.1 }}"/>
                             {{ lang.1 }}
                         </a>
                     </form>
