Minor style and bug fixes

--- a/src/core/spaces/templates/spaces/event_form.html
+++ b/src/core/spaces/templates/spaces/event_form.html
@@ -43,7 +43,7 @@ automatically if found in the data models.
             {% endif %}
 
             <div class="control-group {% if form.title.errors %}error{% endif%}">
-                <label>{{ form.title.label }}</label>
+                <label class="control-label">{{ form.title.label }}</label>
                 <div class="controls">
                     <div class="input-append">
                         {{ form.title }}
@@ -62,7 +62,7 @@ automatically if found in the data models.
             </div>
 
             <div class="control-group {% if form.event_date.errors %}error{% endif%}">
-                <label>{{ form.event_date.label }}</label>
+                <label class="control-label">{{ form.event_date.label }}</label>
                 <div class="controls">
                     <div class="input-append">
                         {% if form.title.value %}
@@ -85,7 +85,7 @@ automatically if found in the data models.
             </div>
 
             <div class="control-group {% if form.description.errors %}error{% endif%}">
-                <label>{{ form.description.label }}</label>
+                <label class="control-label">{{ form.description.label }}</label>
                 <div class="controls">
                     <div class="input-prepend">
                         {{ form.description }}
@@ -105,7 +105,7 @@ automatically if found in the data models.
             </div>
 
             <div class="control-group {% if form.location.errors %}error{% endif%}">
-                <label>{{ form.location.label }}</label>
+                <label class="control-label">{{ form.location.label }}</label>
                 <div class="controls">
                     <div class="input-prepend">
                         {{ form.location }}
@@ -124,7 +124,7 @@ automatically if found in the data models.
             </div>
 
             <div class="control-group {% if form.user.errors %}error{% endif%}">
-                <label>{{ form.user.label }}</label>
+                <label class="control-label">{{ form.user.label }}</label>
                 <div class="controls">
                     <div class="input-prepend">
                         {{ form.user }}
@@ -147,7 +147,7 @@ automatically if found in the data models.
                 <h3>{% trans "Staff members options" %}</h3>
 
                 <div class="control-group {% if form.space.errors %}error{% endif%}">
-                    <label>{{ form.space.label }}</label>
+                    <label class="control-label">{{ form.space.label }}</label>
                     <div class="controls">
                         <div class="input-prepend">
                             {{ form.space }}
@@ -166,7 +166,7 @@ automatically if found in the data models.
                 </div>
 
                 <div class="control-group {% if form.event_author.errors %}error{% endif%}">
-                   <label>{{ form.event_author.label }}</label>
+                   <label class="control-label">{{ form.event_author.label }}</label>
                     <div class="controls">
                         <div class="input-prepend">
                             {{ form.event_author }}
