--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -139,7 +139,7 @@ table.dataTable thead th {
 }
 
 div#table-container th {
-	text-align: left;
+    text-align: center;
     border: 1px solid #ccc;
 }
 div#table-container th.rtotal {
