--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -47,6 +47,14 @@ div.form-container form input.string,
 div.form-container form textarea  {
     width: 500px;
 }
+div#login_form form table,
+div#register_form form table {
+    width: 95%;
+}
+div#login_form input.string,
+div#register_form input.string {
+    width: 95%;
+}
 div.form-container form input[type="checkbox"],
 div.form-container form input[type="radio"] {
     margin: 2px 5px;
