--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -498,6 +498,7 @@ div#rheader th {
 /* Tabs */
 div.tabs {
     width: 100%;
+    clear: left;
 	height: 1.5em;
     padding: 8px 0 2px 0;
     margin: 5px 0 0 0;
@@ -787,6 +788,7 @@ li input + a {
 /* HRM RHeader */
 .hrm_avatar {
     float: left;
+    clear: right;
     padding-bottom: 5px;
     padding-right: 10px;
 }
