Minor style fixes in debates. Refactored proposal URLS. Splitted proposal views.

--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_form.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_form.html
@@ -81,7 +81,7 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
-            {% if "latitude" in form_field %}
+ <!--            {% if "latitude" in form_field %}
             <div class="control-group {% if form.latitude.errors %}error{% endif %}">
                 <label class="control-label">{{ form.latitude.label }}</label>
                 <div class="controls">
@@ -134,7 +134,7 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
-            {% endif %}
+            {% endif %} -->
             <hr />
             <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
             <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Publish' %}" />
