--- a/src/apps/ecidadania/proposals/templates/proposals/proposalset_select_form.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposalset_select_form.html
@@ -56,7 +56,7 @@ This template shows the help_text automatically if found in the data models.
             </div>
         </div>
         <hr />
-            If you what to create independent proposals <a href="{{ get_place.get_absolute_url }}proposal/add/0/">Click here</a>
+            {% trans "If you what to create independent proposals" %} <a href="{{ get_place.get_absolute_url }}proposal/add/">{% trans "Click here" %}</a>
         <hr />
         <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
         <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Create' %}" />
