--- a/src/apps/ecidadania/debate/templates/debate/debate_view.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_view.html
@@ -111,13 +111,11 @@
                         <h3>{% trans "Edit note" %}</h3>
                     </div>
                     <div class="modal-body">
-                        <form class="form-horizontal" enctype="" action="" method="post">{% csrf_token %}
-
+                        <form enctype="" action="" method="post">{% csrf_token %}
                             <div class="control-group">
-                                <label>{% trans "Note title" %}</label>
                                 <div class="controls">
                                     <div class="input-append">
-                                        <input class="span2" id="appendedInput" size="16" type="text" name="notename" />
+                                        <input class="input-large" id="appendedInput" size="16" type="text" name="notename" />
                                         <span class="add-on"><a href="#" rel="tooltip" title="{% trans '100 characters' %}"><i class="icon-question-sign"></i></a></span>
                                     </div>
                                 </div>
@@ -138,6 +136,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
+                        <a href="#" class="btn" data-dismiss="modal">{% trans "Cancel" %}</a>
                         <a href="#" onclick="saveNote()" class="btn btn-primary">{% trans "Save" %}</a>
                     </div>
                 </div>
@@ -155,18 +154,12 @@
                     </div>
                     <div class="modal-footer">
                         {% if user.is_authenticated %}
-                            <h5 class="note-comment-title">Comment</h5>
+                            <h5 class="note-comment-title">{% trans "Comment" %}</h5>
                             <div id="note-comment">
                                 <form id="form_comments" action="{% comment_form_target %}" method="post">{% csrf_token %}
-                                    <table>
-                                        <tr>
-                                            <td colspan="2">
-                                                <div class="kopce"></div>
-                                                <input type="submit" name="submit" value="Submit">
-                                                <input type="submit" name="preview" value="Preview">
-                                            </td>
-                                        </tr>
-                                    </table>
+                                    <div class="kopce"></div>
+                                    <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Submit' %}" />
+                                    <input class="btn btn-small" type="submit" value="{% trans 'Preview' %}" />
                                 </form>
                             </div>
                         {% endif %}
