Bugfix Help, tweak Req, Start Assess module

--- a/private/templates/SandyRelief/views/help.html
+++ b/private/templates/SandyRelief/views/help.html
@@ -4,7 +4,7 @@
 <br>
 <h3>{{=T("Sandy Relief Project Support")}}</h3>
 <ul>
-    <li><b>{{=T("QuickStart Guide"}}</b>: <a href="http://eden.sahanafoundation.org/raw-attachment/wiki/Deployments/Sandy/Occupy/Comms_Volunteer_Sahana_User_Onesheet.pdf">One-Page Guide</a></li>
+    <li><b>QuickStart Guide</b>: <a href="http://eden.sahanafoundation.org/raw-attachment/wiki/Deployments/Sandy/Occupy/Comms_Volunteer_Sahana_User_Onesheet.pdf">One-Page Guide</a></li>
     <li><b>{{=T("Detailed Documentation")}}</b>: <a href="http://eden.sahanafoundation.org/wiki/UserGuidelines/Tutorial/RequestAndInventory" target="_blank">{{=T("Requests and Inventory User Guidelines")}}</a></li>
     <li><b>{{=T("Report a Bug")}}:</b><a href='http://eden.sahanafoundation.org/newticket' target='_blank'> {{=T("Log a new Ticket")}}</a></li>
 	<li><a href='http://eden.sahanafoundation.org/wiki/BugReportingGuidelines' target='_blank'>{{=T("See our Bug Reporting Guidelines")}}</a></li>
